[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain-games"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Olzhas"}
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
